// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HdNotifications renders component 1`] = `
<div class="notifications">
  <transition-group-stub tag="div" name="notifications-bar-"></transition-group-stub>
  <div class="notifications__sizer" style="height: 0px;"></div>
</div>
`;

exports[`HdNotifications renders notification bars 1`] = `
<div class="notifications">
  <transition-group-stub tag="div" name="notifications-bar-">
    <hdnotificationsbar-stub type="notification" message="Hello <a href=&quot;http://localhost&quot;>Homeday!</a>" visible="true" customicon="" offsettop="0" offsetright="0" offsetleft="0"></hdnotificationsbar-stub>
  </transition-group-stub>
  <div class="notifications__sizer" style="height: 0px;"></div>
</div>
`;
